right white space fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
-body{
-    margin: 0 0 0 0;
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
     text-align: center;
-    ;
+     
 }
 h1{
     font-size: 500%;
@@ -44,8 +48,9 @@ hr{
     border-style: solid;
     border: solid 10px;
     */
-    padding: 20px;
-    background-color: #E5B299
+    
+    background-color: #E5B299;
+ 
 }
 
 .middle-container{
